--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,6 +19,7 @@ jobs:
           echo "reject_list=https://raw.githubusercontent.com/maskedeken/domain-list-custom/release/category-ads-all.txt" >> $GITHUB_ENV
           echo "proxy_list=https://raw.githubusercontent.com/maskedeken/domain-list-custom/release/geolocation-!cn.txt" >> $GITHUB_ENV
           echo "direct_list=https://raw.githubusercontent.com/maskedeken/domain-list-custom/release/cn.txt" >> $GITHUB_ENV
+          echo "ipnet_list=https://raw.githubusercontent.com/maskedeken/geoip-custom/release/cn.txt" >> $GITHUB_ENV
         shell: bash
 
       - name: Generate direct.txt file
@@ -39,10 +40,15 @@ jobs:
           curl -sSL ${reject_list} | grep -Ev "^(regexp|keyword):" | perl -ne '/^(full:)([-_a-zA-Z0-9]+(\.[-_a-zA-Z0-9]+)*)/ && print "  - |$2|\n"' | sed "s/|/'/g" >> reject.txt
           curl -sSL ${reject_list} | grep -Ev "^(regexp|keyword|full):" | perl -ne '/^(domain:)?([-_a-zA-Z0-9]+(\.[-_a-zA-Z0-9]+)*)/ && print "  - |+.$2|\n"' | sed "s/|/'/g" >> reject.txt
 
+      - name: Generate cncidr.txt file
+        run: |
+          echo "payload:" > cncidr.txt
+          curl -sSL ${ipnet_list} | perl -ne '/^(\d{1,3}(\.\d{1,3}){3}\/\d{1,2})/ && print "  - |$1|\n"' | sed "s/|/'/g" >> cncidr.txt
+
       - name: Move files to publish directory
         run: |
           mkdir -p publish
-          install -p {proxy,direct,reject}.txt ./publish/
+          install -p {proxy,direct,reject,cncidr}.txt ./publish/
 
       - name: Release and upload assets
         uses: softprops/action-gh-release@v1
